feat: add documentation for history
